--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -7,7 +7,7 @@ name: Waka Readme
 on:
   push:
     branches:
-      - main
+      - master
   workflow_dispatch:
   schedule:
     # Runs at 12am UTC
