--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -3,7 +3,7 @@ name: Waka Readme
 on:
   workflow_dispatch:
   schedule:
-    # Runs at 12am UTC
+    # Runs at 12:30am and 12:30pm UTC
     - cron: '30 0,12 * * *'
 
 jobs:
@@ -18,3 +18,6 @@ jobs:
           TIME_RANGE: all_time
           SHOW_TIME: true
           SHOW_MASKED_TIME: true
+          COMMIT_MESSAGE: 'Updated with Dev Metrics'
+          SHOW_PROJECTS: true
+          SHOW_EDITORS: true
