--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -11,12 +11,13 @@ jobs:
     name: WakaReadme DevMetrics
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master
+      - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          #GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_PROJECTS: 'true'
-          SHOW_LINES_OF_CODE: 'True'
-          SHOW_LOC_CHART: 'False'
-          LOCALE: 'en'
-          SHOW_EDITORS: 'true'
+          SHOW_TITLE: true
+          TIME_RANGE: all_time
+          SHOW_TIME: true
+          SHOW_MASKED_TIME: true
+          COMMIT_MESSAGE: 'Update Dev metrics'
+          CODE_LANG: yaml
+          BLOCKS: -▦
