--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -22,4 +22,4 @@ jobs:
           CODE_LANG: yaml
           BLOCKS: -▦
           SHOW_TOTAL: true
-          COMMIT_BY_ME: true
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
