--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -20,6 +20,6 @@ jobs:
           SHOW_MASKED_TIME: true
           COMMIT_MESSAGE: 'Update Dev metrics'
           CODE_LANG: rust
-          BLOCKS: -▦
+          BLOCKS: ▂▃▄▅▆▇▊
           SHOW_TOTAL: true
           LANG_COUNT: 10
