--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -3,8 +3,8 @@ name: Waka Readme
 on:
   workflow_dispatch:
   schedule:
-    # Runs at 12:30am and 12:30pm IST
-    - cron: '0 19,7 * * *'
+    # Runs at 12:30am and 12:30pm UTC
+    - cron: '30 0,12 * * *'
 
 jobs:
   update-readme:
