--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -3,8 +3,8 @@ name: Waka Readme
 on:
   workflow_dispatch:
   schedule:
-    # Runs at 12:30am and 12:30pm UTC
-    - cron: '30 0,12 * * *'
+    # Runs at 00:30, 08:30 and 16:30 UTC
+    - cron: '30 0,8,16 * * *'
 
 jobs:
   update-readme:
