Add webiste icon and link in README.md, change language from rust to py in waka.yml

--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -19,7 +19,7 @@ jobs:
           SHOW_TIME: true
           SHOW_MASKED_TIME: true
           COMMIT_MESSAGE: '🧑‍💻 Update Dev metrics'
-          CODE_LANG: rust
+          CODE_LANG: py
           BLOCKS: ▁▂▃▄▅▆▇▊
           SHOW_TOTAL: true
           LANG_COUNT: 10
