--- a/.github/workflows/gitlab.yml
+++ b/.github/workflows/gitlab.yml
@@ -4,6 +4,9 @@ on:
   workflow_dispatch:
   push:
     branches: [ main ]
+  schedule:
+    # Runs at 08:30 UTC
+    - cron: '30 8 * * *'
 
 jobs:
   build:
