--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -11,7 +11,10 @@ jobs:
     if: github.actor == 'dependabot[bot]'
     steps:
       - name: Enable auto-merge for Dependabot PRs
-        run: gh pr merge --auto --merge "$PR_URL"
+        run: |
+          gh pr merge --auto --merge "$PR_URL"
+          gh pr lock "$PR_NO" --reason resolved
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
+          PR_NO: ${{github.event.pull_request.number}}
           GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
