--- a/.github/workflows/gitlab.yml
+++ b/.github/workflows/gitlab.yml
@@ -19,6 +19,7 @@ jobs:
 
     - name: Push To Gitlab
       run: |
+        echo "<!-- $(date) -->" >> README.md
         git config user.name "Alvin Joy"
         git config user.email "15279891-alvinjoy@users.noreply.gitlab.com"
         git remote set-url origin "https://oauth2:${token}@gitlab.com/alvinjoy/alvinjoy.git"
