--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -12,9 +12,9 @@ jobs:
     steps:
       - name: Enable auto-merge for Dependabot PRs
         run: |
+          gh --version
           gh pr merge --auto --merge "$PR_URL"
-          gh pr lock "$PR_NO" --reason resolved
+          gh pr lock "$PR_URL" --reason resolved
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
-          PR_NO: ${{github.event.pull_request.number}}
           GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
