--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -35,6 +35,6 @@ jobs:
           publish_branch: output
           enable_jekyll: true
           user_name: 'github-actions[bot]'
-          user_email: 'github-actions[bot]@users.noreply.github.com'
+          user_email: '41898282+github-actions[bot]@users.noreply.github.com'
           allow_empty_commit: true
           commit_message: '🐍 Generate contribution snake:'
