--- a/.github/workflows/gitlab.yml
+++ b/.github/workflows/gitlab.yml
@@ -16,6 +16,15 @@ jobs:
     - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
       with: 
         fetch-depth: 0
+    - name: Checkout
+      uses: actions/checkout@v4
+      
+    - name: Import GPG key
+      uses: crazy-max/ghaction-import-gpg@01dd5d3ca463c7f10f7f4f7b4f177225ac661ee4 # v6.1.0
+      with:
+        gpg_private_key: ${{ secrets.GPG_KEY }}
+        git_user_signingkey: true
+        git_commit_gpgsign: true
 
     - name: Push To Gitlab
       run: |
