--- a/.github/workflows/gitlab.yml
+++ b/.github/workflows/gitlab.yml
@@ -26,6 +26,7 @@ jobs:
       - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
         with:
           fetch-depth: 0
+      - name: Mirror
       - uses: pixta-dev/repository-mirroring-action@674e65a7d483ca28dafaacba0d07351bdcc8bd75 # v1.1.1
         with:
           target_repo_url: "git@codeberg.org:alvinjoy/alvinjoy.git"
