--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -27,6 +27,8 @@ jobs:
     needs: waka
     name: GitHub Activity
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
       - uses: jamesgeorge007/github-activity-readme@df57d5cab9b53277241f93190e176b38dd95eb1a # v0.4.4
