--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -7,7 +7,7 @@ on:
     - cron: "30 0 * * *"
 
 jobs:
-  waka:
+  update-readme:
     name: WakaReadme DevMetrics
     runs-on: ubuntu-latest
     steps:
@@ -23,14 +23,3 @@ jobs:
           BLOCKS: ▁▂▃▄▅▆▇▊
           SHOW_TOTAL: true
           LANG_COUNT: 10
-  activity:
-    needs: waka
-    name: GitHub Activity
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
-      - uses: jamesgeorge007/github-activity-readme@df57d5cab9b53277241f93190e176b38dd95eb1a # v0.4.4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
