--- a/.github/workflows/gitlab.yml
+++ b/.github/workflows/gitlab.yml
@@ -10,7 +10,8 @@ jobs:
   to_gitlab:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+    - name: Checkout repository
+      uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
       with: 
         fetch-depth: 0
     - name: Mirror to GitLab
@@ -21,7 +22,8 @@ jobs:
   to_codeberg:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+      - name: Checkout repository
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
         with:
           fetch-depth: 0
       - name: Mirror to Codeberg
