--- a/.github/workflows/gitlab.yml
+++ b/.github/workflows/gitlab.yml
@@ -14,8 +14,20 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
+
       - name: Mirror to GitLab
-        uses: pixta-dev/repository-mirroring-action@674e65a7d483ca28dafaacba0d07351bdcc8bd75 # v1.1.1
-        with:
-          target_repo_url: "git@gitlab.com:alvinjoy/alvinjoy.git"
-          ssh_private_key: ${{ secrets.SSH_KEY }}
+        env:
+          INPUT_SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
+        run: |
+          set -eu
+          
+          mkdir -p ~/.ssh
+          echo "$INPUT_SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          
+          ssh-keyscan gitlab.com >> ~/.ssh/known_hosts
+          export GIT_SSH_COMMAND="ssh -v -i ~/.ssh/id_rsa -l git"
+          
+          git remote add mirror "git@gitlab.com:alvinjoy/alvinjoy.git"
+          git push --mirror mirror
+          git remote remove mirror
